--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             box-sizing: border-box;
-            font-size: 16px;
+            font-size: 14px;
             transition: 0.3s ease;
         }
 
@@ -62,6 +62,8 @@
             cursor: pointer;
             font-weight: 500;
             transition: background-color 0.3s, color 0.3s, transform 0.2s;
+            padding: 10px;
+            width: auto;
         }
 
         button:hover {
@@ -76,11 +78,14 @@
         #profitButton {
             background: linear-gradient(45deg, #28a745, #218838);
             color: white;
+            font-size: 16px;
+            margin-right: 10px;
         }
 
         #lossButton {
             background: linear-gradient(45deg, #dc3545, #c82333);
             color: white;
+            font-size: 16px;
         }
 
         #lightThemeButton {
@@ -95,7 +100,7 @@
 
         .button-group {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
             gap: 10px;
         }
 
@@ -143,6 +148,16 @@
         .theme-switch button {
             padding: 10px 20px;
             margin: 5px;
+        }
+
+        .strategy-description {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 14px;
+            color: #555;
         }
 
         @keyframes highlight {
@@ -193,13 +208,18 @@
             </select>
         </div>
 
+        <div class="strategy-description" id="strategyDescription">Select a strategy to see details here.</div>
+
+        <div class="form-group">
+            <button id="initializeButton">Initialize</button>
+        </div>
+
         <div class="form-group">
             <label for="nextInvestment">Next Investment ($)</label>
             <input type="text" id="nextInvestment" readonly>
         </div>
 
         <div class="button-group">
-            <button id="initializeButton">Initialize</button>
             <button id="profitButton">Profit</button>
             <button id="lossButton">Loss</button>
         </div>
@@ -242,6 +262,17 @@
         const payoutPercentageInput = document.getElementById('payoutPercentage');
         const strategySelect = document.getElementById('strategy');
         const nextInvestmentInput = document.getElementById('nextInvestment');
+        const strategyDescription = document.getElementById('strategyDescription');
+
+        const strategyDetails = {
+            standard: "Invest a fixed percentage of your balance.",
+            martingale: "Double your investment after a loss to recover losses.",
+            fibonacci: "Use the Fibonacci sequence for adjusting investments."
+        };
+
+        strategySelect.addEventListener('change', () => {
+            strategyDescription.textContent = strategyDetails[strategySelect.value];
+        });
 
         document.getElementById('initializeButton').addEventListener('click', (event) => {
             event.preventDefault();
@@ -305,11 +336,24 @@
             `;
             historyTable.appendChild(row);
 
-            previousInvestment = success ? balance * 0.01 : previousInvestment * 2;  
+            previousInvestment = calculateNextInvestment(success);
             nextInvestmentInput.value = `$${previousInvestment.toFixed(2)}`;
 
             if (round % 10 === 0) {
                 displayRoundSummary();
+            }
+        }
+
+        function calculateNextInvestment(success) {
+            switch (strategySelect.value) {
+                case 'standard':
+                    return balance * 0.01;
+                case 'martingale':
+                    return success ? balance * 0.01 : previousInvestment * 2;
+                case 'fibonacci':
+                    return success ? balance * 0.01 : previousInvestment * 1.5; 
+                default:
+                    return balance * 0.01;
             }
         }
 
@@ -320,7 +364,7 @@
                 <td colspan="2">Summary (Rounds ${round - 9}-${round})</td>
                 <td>Wins: ${roundSummary.wins}, Losses: ${roundSummary.losses}</td>
                 <td>Total Profit: $${roundSummary.totalProfit.toFixed(2)}</td>
-                <td>Balance: $${balance.toFixed(2)}</td>
+                <td>Balance: $${balance.toFixed(2)} (Strategy: ${strategySelect.value})</td>
             `;
             historyTable.appendChild(summaryRow);
 
@@ -329,4 +373,3 @@
     </script>
 </body>
 </html>
-
